tests/NormalTests/paczka1/fuzzy1/52494318.err
Error in line 2: OK7q A299 9,6
Error in line 6: dGlqI2ykf A684 18,2
Error in line 3: OK7q S509 820,6
Error in line 17: ipGkeg18 A299 34,4
Error in line 22: A299 A684 79,2
Error in line 20: ipGkeg18 A684 58,8
Error in line 31: Tjrn8V A32 96,2
